# postgres-multi-agent-data-analytics

./: .gitignore  countries_report.json  countries_report.txt  countries_report.yml  pyproject.toml
postgres-multi-agent-data-analytics/: main.py
postgres-multi-agent-data-analytics/modules/: db.py  prompt-generate-python-class.txt
