[tool.poetry]
name = "postgres-multi-agent-data-analytics"
version = "0.1.0"
description = ""
authors = ["Epiphane EGAH <egahepiphane@gmail.com>"]
readme = "README.md"
packages = [
    { include = "postgres-multi-agent-data-analytics", from = "."}
]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28"
argparse = "^1.4.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pyautogen = "^0.1.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "postgres-multi-agent-data-analytics.main:main"